syntax = "proto3";

option csharp_namespace = "ZodiacSignsService";

package zodiac;

service AutumnZodiacSign {
  rpc GetAutumnZodiacSign (AutumnZodiacSignRequest) returns (AutumnZodiacSignReply) {};
}

message AutumnZodiacSignRequest {
  string birthday = 1;
}

message AutumnZodiacSignReply {
  string zodiacSign = 1;
}
